# simple-file-server

./: LICENSE  README.md
app/: Cargo.toml  config.yml
app/examples/: multipart.rs
app/src/: app_config.rs  lib.rs  main.rs  spawn_app.rs  startup.rs  telemetry.rs
app/src/domain/: mod.rs  user.rs
app/src/middleware/: identity.rs
app/src/openapi/: api_doc.rs
app/src/route/: health_check.rs  login.rs  mod.rs  upload.rs
app/tests/: health_check.rs  login_test.rs
app/tests/common/: mod.rs  spawn_app.rs
