[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
claim = "0.5.0"
config = "0.15.13"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
actix-multipart = "0.7.2"
tracing-appender = "0.2.3"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
once_cell = "1.21.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = "0.12.22"
sanitize-filename = "0.6.0"
env_logger = "0.8.4"
